examples/test/testpolicy15562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15562
  namespace: namespace91
spec:
  podSelector:
    matchLabels:
      key13: value40
      key16: value43
      key25: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value33
          key29: value30
          key25: value28
